# thesis-backend

./: main.py  pyproject.toml  requirements.txt
api/: __init__.py  docs.py
api/v1/: __init__.py  deps.py  exception.py
api/v1/endpoints/: authentication.py  comment.py  issue.py  project.py  user.py
core/: __init__.py  config.py  security.py
db/: create_guest_account.py  init_db.py
enums/: issue.py  project.py
models/: __init__.py  comment.py  issue.py  project.py  user.py
models/mixin/: push_pull.py
schemas/: __init__.py  comment.py  issue.py  project.py  token.py  user.py  validation_error.py
utils/: imgbb.py
